// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: user logged in 1`] = `
<Styled(div)>
  <div
    className="display-flex-row"
  >
    <Styled(div)>
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        path/to/
      </span>
      <span
        className="little-spacer-right"
      >
        component
      </span>
      <ClipboardIconButton
        className="button-link link-no-underline"
        copyValue="path/to/component"
      />
    </Styled(div)>
    <div
      className="dropdown spacer-right"
    >
      <HotspotOpenInIdeButton
        hotspotKey="01fc972e-2a3c-433e-bcae-0bd7f88f5123"
        projectKey="hotspot-component"
      />
    </div>
  </div>
  <ClipboardButton
    copyValue="http://localhost/security_hotspots?id=my-project&hotspots=01fc972e-2a3c-433e-bcae-0bd7f88f5123"
  >
    <span>
      hotspots.get_permalink
    </span>
    <LinkIcon
      className="spacer-left"
    />
  </ClipboardButton>
</Styled(div)>
`;

exports[`should render correctly: user logged in with project Name 1`] = `
<Styled(div)>
  <div
    className="display-flex-row"
  >
    <Styled(div)>
      <QualifierIcon
        className="little-spacer-right"
        qualifier="TRK"
      />
      <span
        className="little-spacer-right"
      >
        Hotspot Component
      </span>
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        path/to/
      </span>
      <span
        className="little-spacer-right"
      >
        component
      </span>
      <ClipboardIconButton
        className="button-link link-no-underline"
        copyValue="path/to/component"
      />
    </Styled(div)>
    <div
      className="dropdown spacer-right"
    >
      <HotspotOpenInIdeButton
        hotspotKey="01fc972e-2a3c-433e-bcae-0bd7f88f5123"
        projectKey="hotspot-component"
      />
    </div>
  </div>
  <ClipboardButton
    copyValue="http://localhost/security_hotspots?id=my-project&hotspots=01fc972e-2a3c-433e-bcae-0bd7f88f5123"
  >
    <span>
      hotspots.get_permalink
    </span>
    <LinkIcon
      className="spacer-left"
    />
  </ClipboardButton>
</Styled(div)>
`;

exports[`should render correctly: user not logged in 1`] = `
<Styled(div)>
  <div
    className="display-flex-row"
  >
    <Styled(div)>
      <QualifierIcon
        qualifier="FIL"
      />
       
      <span>
        path/to/
      </span>
      <span
        className="little-spacer-right"
      >
        component
      </span>
      <ClipboardIconButton
        className="button-link link-no-underline"
        copyValue="path/to/component"
      />
    </Styled(div)>
  </div>
  <ClipboardButton
    copyValue="http://localhost/security_hotspots?id=my-project&hotspots=01fc972e-2a3c-433e-bcae-0bd7f88f5123"
  >
    <span>
      hotspots.get_permalink
    </span>
    <LinkIcon
      className="spacer-left"
    />
  </ClipboardButton>
</Styled(div)>
`;
